Comienzo capitulo de verificacion formal.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,19 +27,36 @@
   ],
   "cSpell.words": [
     "ACTUS",
+    "Agda",
+    "asincrónica",
     "autoejecutables",
     "Beiró",
     "Biblatex",
+    "combinadores",
     "criptomoneda",
     "criptomonedas",
     "criptos",
+    "currificadas",
+    "heurística",
     "Inicialización",
     "interconectados",
     "IOHK",
     "lovelaces",
+    "Matita",
+    "Metamath",
+    "metaprover",
+    "minimización",
+    "monotonicidad",
     "Ouroboros",
+    "polimórfica",
+    "Quickcheck",
+    "reescritura",
     "síncrono",
+    "SPASS",
+    "tipadas",
+    "TPTP",
     "trackea",
-    "utxo"
+    "utxo",
+    "Yices"
   ]
 }
