Termino de escribir Sledgehammer e Isabelle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
     "Beiró",
     "Biblatex",
     "combinadores",
+    "contraejemplo",
+    "contraejemplos",
     "criptomoneda",
     "criptomonedas",
     "criptos",
@@ -45,13 +47,16 @@
     "Matita",
     "Metamath",
     "metaprover",
+    "milisegundos",
     "minimización",
     "monotonicidad",
     "Ouroboros",
     "polimórfica",
     "Quickcheck",
+    "recursivamente",
     "reescritura",
     "síncrono",
+    "sintácticamente",
     "SPASS",
     "tipadas",
     "TPTP",
