Agrego tablas del tex de las specs de actus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "autoejecutables",
     "Beiró",
     "Biblatex",
+    "CE",
     "combinadores",
     "contraejemplo",
     "contraejemplos",
@@ -39,28 +40,44 @@
     "criptomonedas",
     "criptos",
     "currificadas",
+    "FP",
     "heurística",
+    "hline",
+    "IED",
     "Inicialización",
+    "instancian",
     "interconectados",
     "IOHK",
+    "IP",
+    "IPCI",
     "lovelaces",
     "Matita",
     "Metamath",
     "metaprover",
     "milisegundos",
     "minimización",
+    "monomorfizado",
+    "monomorfizar",
     "monotonicidad",
     "Ouroboros",
     "polimórfica",
+    "polimórficas",
+    "PRD",
     "Quickcheck",
     "recursivamente",
     "reescritura",
+    "RR",
+    "RRF",
+    "SC",
     "síncrono",
     "sintácticamente",
     "SPASS",
+    "TD",
     "tipadas",
+    "titularización",
     "TPTP",
     "trackea",
+    "txin",
     "utxo",
     "Yices"
   ]
