--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
     "heurística",
     "hline",
     "IED",
+    "infijo",
     "Inicialización",
     "instancian",
     "interconectados",
@@ -73,6 +74,7 @@
     "sintácticamente",
     "SPASS",
     "TD",
+    "tipada",
     "tipadas",
     "titularización",
     "TPTP",
