Seccion de tipos y pruebas en isabelle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
     "Beiró",
     "Biblatex",
     "CE",
+    "chktex",
     "combinadores",
     "contraejemplo",
     "contraejemplos",
@@ -40,6 +41,8 @@
     "criptomonedas",
     "criptos",
     "currificadas",
+    "datatypes",
+    "endline",
     "FP",
     "heurística",
     "hline",
@@ -73,6 +76,8 @@
     "síncrono",
     "sintácticamente",
     "SPASS",
+    "subgoal",
+    "subgoals",
     "TD",
     "tipada",
     "tipadas",
