Empiezo desarrollo: Agrego tablas (tech-specs) de COM, CSH y CLM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "autoejecutables",
     "Beiró",
     "Biblatex",
+    "cardano",
     "CE",
     "chktex",
     "combinadores",
@@ -44,6 +45,7 @@
     "datatypes",
     "endline",
     "FP",
+    "Hauser",
     "heurística",
     "hline",
     "IED",
@@ -55,6 +57,7 @@
     "IP",
     "IPCI",
     "lovelaces",
+    "marlowe",
     "Matita",
     "Metamath",
     "metaprover",
