Agrego palabras desconocidas al diccionario de cSpell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,23 +28,31 @@
   "cSpell.words": [
     "ACTUS",
     "Agda",
+    "amortizer",
     "asincrónica",
     "autoejecutables",
     "Beiró",
     "Biblatex",
     "cardano",
+    "Cashflows",
     "CE",
     "chktex",
     "combinadores",
+    "Compat",
     "contraejemplo",
     "contraejemplos",
     "criptomoneda",
     "criptomonedas",
     "criptos",
+    "CSMF",
+    "CSMP",
     "currificadas",
     "datatypes",
     "endline",
+    "feac",
+    "FEAC",
     "FP",
+    "FUTUR",
     "Hauser",
     "heurística",
     "hline",
@@ -55,7 +63,14 @@
     "interconectados",
     "IOHK",
     "IP",
+    "ipac",
+    "ipcb",
+    "IPCB",
     "IPCI",
+    "IPFL",
+    "IPFX",
+    "ipla",
+    "ipnr",
     "lovelaces",
     "marlowe",
     "Matita",
@@ -66,21 +81,30 @@
     "monomorfizado",
     "monomorfizar",
     "monotonicidad",
+    "OPTNS",
     "Ouroboros",
     "polimórfica",
     "polimórficas",
     "PRD",
+    "Preceeding",
+    "prnxt",
+    "PRNXT",
     "Quickcheck",
     "recursivamente",
     "reescritura",
     "RR",
     "RRF",
     "SC",
+    "SCIP",
+    "SCMF",
+    "SCMP",
+    "SCNT",
     "síncrono",
     "sintácticamente",
     "SPASS",
     "subgoal",
     "subgoals",
+    "SWPPV",
     "TD",
     "tipada",
     "tipadas",
