Empiezo a escribir sección de Semantica y seccion de Pay y Swap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,11 +28,13 @@
   "cSpell.words": [
     "ACTUS",
     "Agda",
+    "alice",
     "amortizer",
     "asincrónica",
     "autoejecutables",
     "Beiró",
     "Biblatex",
+    "biyección",
     "cardano",
     "Cashflows",
     "CE",
@@ -41,6 +43,7 @@
     "Compat",
     "contraejemplo",
     "contraejemplos",
+    "counterparty",
     "criptomoneda",
     "criptomonedas",
     "criptos",
@@ -71,6 +74,7 @@
     "IPFX",
     "ipla",
     "ipnr",
+    "Lamela",
     "lovelaces",
     "marlowe",
     "Matita",
@@ -81,14 +85,17 @@
     "monomorfizado",
     "monomorfizar",
     "monotonicidad",
+    "newtype",
     "OPTNS",
     "Ouroboros",
     "polimórfica",
     "polimórficas",
+    "Posix",
     "PRD",
     "Preceeding",
     "prnxt",
     "PRNXT",
+    "pseudocódigo",
     "Quickcheck",
     "recursivamente",
     "reescritura",
@@ -109,6 +116,7 @@
     "tipada",
     "tipadas",
     "titularización",
+    "tokenización",
     "TPTP",
     "trackea",
     "txin",
