Arreglo linebreaks en algunos listings y hago una pasada de chktex y spellchecking. Agregue un chktex.local para que chktex reconozca code como un environment Verbatim

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,13 +32,26 @@
     "amortizer",
     "asincrónica",
     "autoejecutables",
+    "backcolour",
+    "backgroundcolor",
+    "basewidth",
+    "basicstyle",
     "Beiró",
     "Biblatex",
     "biyección",
+    "boxrule",
+    "breakatwhitespace",
+    "breaklines",
+    "captionpos",
     "cardano",
     "Cashflows",
     "CE",
     "chktex",
+    "codegray",
+    "codegreen",
+    "codepurple",
+    "colback",
+    "coltitle",
     "combinadores",
     "Compat",
     "contraejemplo",
@@ -52,6 +65,7 @@
     "currificadas",
     "datatypes",
     "endline",
+    "extendedchars",
     "feac",
     "FEAC",
     "FP",
@@ -75,9 +89,17 @@
     "IPFX",
     "ipla",
     "ipnr",
+    "isarblue",
+    "isargreen",
+    "isarlightred",
+    "isarpurple",
+    "isarred",
+    "keepspaces",
+    "keywordstyle",
     "Lamela",
     "lovelaces",
     "marlowe",
+    "mathescape",
     "Matita",
     "Metamath",
     "metaprover",
@@ -86,8 +108,11 @@
     "monomorfizado",
     "monomorfizar",
     "monotonicidad",
+    "morecomment",
     "newstate",
     "newtype",
+    "numbersep",
+    "numberstyle",
     "OPTNS",
     "Ouroboros",
     "polimórfica",
@@ -108,12 +133,17 @@
     "SCMF",
     "SCMP",
     "SCNT",
+    "showspaces",
+    "showstringspaces",
+    "showtabs",
     "síncrono",
     "sintácticamente",
     "SPASS",
+    "stringstyle",
     "subgoal",
     "subgoals",
     "SWPPV",
+    "tabsize",
     "TD",
     "tipada",
     "tipadas",
@@ -123,6 +153,7 @@
     "trackea",
     "trec",
     "txin",
+    "upquote",
     "utxo",
     "Yices"
   ]
