Auto stash before revert of "Agrego índice de figuras y lista de cuadros de código"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,7 @@
     "monotonicidad",
     "morecomment",
     "newstate",
+    "newtcblisting",
     "newtype",
     "numbersep",
     "numberstyle",
