--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
     "IED",
     "indentación",
     "infijo",
+    "inicialización",
     "Inicialización",
     "instancian",
     "interconectados",
@@ -145,6 +146,7 @@
     "stringstyle",
     "subgoal",
     "subgoals",
+    "subsección",
     "SWPPV",
     "tabsize",
     "TD",
