Remuevo tilde problematica dentro de listing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,6 +145,7 @@
     "sintácticamente",
     "SPASS",
     "stringstyle",
+    "subcontratos",
     "subgoal",
     "subgoals",
     "subsección",
